--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>INSURE</title>
     <link rel="stylesheet" href="style.css" />
     <style>
       @import url("https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=Karla:ital,wght@0,200..800;1,200..800&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Playwrite+AU+SA:wght@100..400&family=Rubik+Vinyl&display=swap");
@@ -56,7 +56,9 @@
             <br />
             
           </p> -->
+          <div class="btn">
           <a href="" class="plans1">View Plans</a>
+        </div>
         </div>
         <div class="image">
           <img src="./images/image-intro-desktop.jpg" alt="family image" />
@@ -72,7 +74,7 @@
         <img
           src="./images/bg-pattern-intro-left-desktop.svg"
           alt="border-design"
-          height="430px"
+          height="480px"
         />
       </div>
       <div class="mobile-left">
@@ -234,13 +236,13 @@
             </div>
           </div>
         </div>
-        <div class="footer-image">
+        <!-- <div class="footer-image">
           <img
             src="./images/bg-pattern-footer-desktop.svg"
             alt="footer-design"
             height="190px"
           />
-        </div>
+        </div> -->
       </div>
     </footer>
   </body>
