--- a/index.html
+++ b/index.html
@@ -33,11 +33,13 @@
         <div class="text">
           <span class="line"></span>
           <div class="text-line">
-            <span>Humanizing</span>
-            <span>your Insurance.</span>
+            <h1>Humanizing your Insurance.</h1>
+            <!-- <span>Humanizing</span>
+            <span></span> -->
           </div>
           <div class="text-line2">
-            <span>
+            <p>Get your life insurance coverage easier and faster. We blend  our expertise and technology to help you find the plan that's right for you. Ensure you and your loved ones are protected.</p>
+            <!-- <span>
               Get your life insurance coverage easier and faster. We blend
             </span>
             <span
@@ -45,7 +47,7 @@
             </span>
             <span
               >right for you. Ensure you and your loved ones are protected.
-            </span>
+            </span> -->
           </div>
           <!-- <h1>
             Humanizing <br />
@@ -99,12 +101,13 @@
         </div>
         <div class="container">
           <div class="card">
-            <img src="./images/icon-snappy-process.svg" alt="process" />
+            <img src="./images/icon-snappy-process.svg" alt="process" height="100px" width="100px"/>
             <h4>Snappy Process</h4>
             <div class="card-text">
-              <span>Our apllication process can be completed </span>
+              <p>Our apllication process can be completed in minutes, not hours. Don't get stuck filling in tedious forms.</p>
+              <!-- <span>Our apllication process can be completed </span>
               <span>in minutes, not hours. Don't get stuck filling</span>
-              <span>in tedious forms.</span>
+              <span>in tedious forms.</span> -->
             </div>
             <!-- <p>
               <br />
@@ -112,12 +115,13 @@
             </p> -->
           </div>
           <div class="card">
-            <img src="./images/icon-affordable-prices.svg" alt="process" />
+            <img src="./images/icon-affordable-prices.svg" alt="process" height="100px" width="100px"/>
             <h4>Affordable Prices</h4>
             <div class="card-text">
-              <span>We don't want you worryingabout high </span>
+              <p>We don't want you worryingabout high monthly costs,our prices may be low,but till offerthe best coverage possible.</p>
+              <!-- <span>We don't want you worryingabout high monthly costs,our prices may be low,but till offerthe best coverage possible.</span>
               <span>monthly costs,our prices may be low,but</span>
-              <span>till offerthe best coverage possible.</span>
+              <span>till offerthe best coverage possible.</span> -->
             </div>
             <!-- <p>
                <br /> <br />
@@ -125,12 +129,13 @@
             </p> -->
           </div>
           <div class="card">
-            <img src="./images/icon-people-first.svg" alt="process" />
+            <img src="./images/icon-people-first.svg" alt="process" height="100px" width="100px" />
             <h4>People First</h4>
             <div class="card-text">
-              <span>Our plans aren't full of consitions and </span>
+              <p>Our plans aren't full of consitions and clauses to preventpayouts. We make sure you're coveredwhen you need it.</p>
+              <!-- <span>Our plans aren't full of consitions and </span>
               <span>clauses to preventpayouts. We make sure</span>
-              <span>you're coveredwhen you need it.</span>
+              <span>you're coveredwhen you need it.</span> -->
             </div>
             <!-- <p>
                <br /> <br />
@@ -199,7 +204,7 @@
             </svg>
           </div>
         </div>
-
+        <h1></h1>
         <div class="footer-lower">
           <div class="point">
             <h6>Our Company</h6>
